[gd_scene load_steps=3 format=3 uid="uid://cr6wfurweno23"]

[ext_resource type="PackedScene" uid="uid://bvfxhovxygquo" path="res://Scenes/Character Planner Menu/InputLv.tscn" id="1_5gaae"]
[ext_resource type="Script" path="res://Scenes/Character Planner Menu/input_lv_container.gd" id="1_7xweu"]

[node name="InputLvContainer" type="VBoxContainer"]
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_7xweu")
preset = "Expanded"
metadata/_edit_lock_ = true

[node name="InputLvContainer Row 1" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
metadata/_edit_lock_ = true

[node name="InputLv" parent="InputLvContainer Row 1" instance=ExtResource("1_5gaae")]
unique_name_in_owner = true
layout_mode = 2
caret_column = 1

[node name="InputLv Add" type="Button" parent="InputLvContainer Row 1"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(27, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "+1"
metadata/_edit_lock_ = true

[node name="InputLv Sub" type="Button" parent="InputLvContainer Row 1"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(27, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "-1"
metadata/_edit_lock_ = true

[node name="InputLv Switch" type="CheckButton" parent="InputLvContainer Row 1"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
metadata/_edit_lock_ = true

[node name="InputLvContainer Row 2" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
metadata/_edit_lock_ = true

[node name="InputLv Max" type="Button" parent="InputLvContainer Row 2"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Max"
metadata/_edit_lock_ = true

[node name="InputLv Cycle" type="Button" parent="InputLvContainer Row 2"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Next Asc"
metadata/_edit_lock_ = true

[node name="InputLvContainer Row 3" type="HBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_edit_lock_ = true

[node name="InputLvContainer Row 4" type="HBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_edit_lock_ = true

[connection signal="pressed" from="InputLvContainer Row 1/InputLv Add" to="." method="add_pressed"]
[connection signal="pressed" from="InputLvContainer Row 1/InputLv Sub" to="." method="sub_pressed"]
[connection signal="pressed" from="InputLvContainer Row 1/InputLv Switch" to="." method="switch_pressed"]
[connection signal="pressed" from="InputLvContainer Row 2/InputLv Max" to="." method="max_pressed"]
[connection signal="pressed" from="InputLvContainer Row 2/InputLv Cycle" to="." method="cycle_pressed"]
